# alarm_system

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: prod-migration-polish-ship.md
.github/workflows/: deploy-readiness.yml  load-and-rollback-gate.yml  phase4-long-burst.yml  python-app.yml
deploy/config/: alert_presets.json  alerts.sample.json  channel-bindings.sample.json  rules.sample.json
docs/: README.md
docs/architecture/: README.md  agent-runbook.md  architecture-deck.md  canonical-schema-versioning.md  compute-rules-baseline.md  hardening-gap-matrix.md  implementation-blueprint.md  ingestion-implementation-notes.md  ingestion-phase1-implementation-notes.md  (+9 more)
migrations/: 0001_phase3_entry.sql
schemas/: canonical_event.v1.schema.json
tests/: test_alert_filters.py  test_alert_store.py  test_api.py  test_api_migrations.py  test_backpressure_runtime.py  test_canonical_schema_contract.py  test_dedup.py  test_delivery_mute.py  test_delivery_runtime.py  test_load_harness.py  test_logical_split.py  test_observability.py  test_phase4_load_harness.py  test_phase4_metrics.py  test_phase4_tools.py  test_rollback_drill.py  test_rule_catalog.py  test_rule_store.py  test_run_api.py  test_runtime_metrics.py  test_runtime_tools.py  test_service_runtime.py  test_state_delivery_attempts.py  test_telegram_client.py  test_telegram_command_catalog_contract.py  test_telegram_commands_read.py  test_telegram_ui_interactive.py  test_telegram_webhook_noise.py
(+118 files in other folders)
