[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm_system"
version = "0.1.0"
description = "Custom alerts system for Polymarket prediction markets"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "redis>=5.0",
]

[project.optional-dependencies]
ingestion = [
    "websockets>=12.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "flake8>=7.0",
]

[project.scripts]
run-ingestion = "alarm_system.ingestion.run_ingestion:main"
run-service = "alarm_system.service_runtime:main"
run-load-gate = "alarm_system.runtime_tools:run_load_gate_main"
run-rollback-gate = "alarm_system.runtime_tools:run_rollback_gate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alarm_system = ["schemas/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
